# TraitGym

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  TraitGym.ipynb  pyproject.toml
config/: config.yaml
dataset/: README.md
dataset/config/: complex_traits.csv  config.yaml
dataset/workflow/: Snakefile
dataset/workflow/rules/: clinvar.smk  common.smk  complex_traits.smk  consequence.smk  gnomad.smk  hgmd.smk  intervals.smk  ldscore.smk  mendelian_traits.smk  omim.smk  smedley_et_al.smk  stats.smk
eval/: README.md
eval/config/: config.yaml
eval/workflow/: Snakefile
eval/workflow/rules/: alphagenome.smk  common.smk  conservation.smk  gpn_star.smk  model.smk  plot.smk  precomputed.smk  promoterai.smk  spliceai.smk
eval/workflow/scripts/: vep_alphagenome.py
other/: README.md
other/config/: config.yaml  models.csv  traits_n30.csv
other/config/gwas/: independent_traits_filtered.csv  independent_traits_filtered_n30.csv
other/config/omim/: filtered_traits.txt
other/workflow/: Snakefile
other/workflow/notebooks/: cadd_overlap.ipynb  causal_overlap.ipynb  clinvar.ipynb  dataset_eda.ipynb  de_novo.ipynb  disease_traits.ipynb  evo2_by_consequence.ipynb  glm_zero_shot.ipynb  interpretation_assays.ipynb  interpretation_borzoi.ipynb  interpretation_cadd.ipynb  performance.ipynb  performance_all.ipynb  performance_by_consequence.ipynb  performance_by_consequence_glm_promoter.ipynb  performance_by_trait.ipynb  performance_disease.ipynb  performance_ensemble.ipynb  performance_ensemble_light.ipynb  performance_eqtl_overlap.ipynb  performance_gene_matched_complex.ipynb  performance_gene_matched_mendelian.ipynb  performance_maf_ablation.ipynb  performance_pip_ablation.ipynb  performance_pleiotropy.ipynb  promoter.ipynb  sample_size.ipynb  sei.ipynb
other/workflow/rules/: common.smk  plot.smk
other/workflow/scripts/: evo2_logits.py  run_vep_embeddings_hyenadna.py  run_vep_embeddings_nucleotide_transformer.py  run_vep_evo2.py  run_vep_inner_products_hyenadna.py  run_vep_llr_aidodna.py  (+2 more)
src/traitgym/: intervals.py  matching.py  metrics.py  plotting.py  precomputed.py  stats.py  variants.py
tests/: test_intervals.py  test_matching.py  test_metrics.py  test_precomputed.py  test_variants.py
workflow/: Snakefile
workflow/notebooks/: clinvar_metadata.ipynb  de_novo.ipynb
workflow/rules/: common.smk  model.smk  plot.smk
workflow/scripts/: ht2tsv.py  run_vep_embeddings_aidodna.py  run_vep_embeddings_specieslm.py  run_vep_inner_products_nucleotide_transformer.py  run_vep_llr_nucleotide_transformer.py  vep_alphagenome.py  vep_alphagenome_v2.py  vep_enformer_borzoi.py
(+35 files in other folders)
