[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traitgym"
version = "0.1.0"
description = "Benchmarking DNA Sequence Models for Causal Regulatory Variant Prediction in Human Genetics"
authors = [
    {name = "Gonzalo Benegas", email = "gbenegas@berkeley.edu"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snakemake",
    "polars",
    "scipy",
    "seaborn",
    "scikit-learn",
    "huggingface-hub",
    "liftover",
    "gpn @ git+https://github.com/songlab-cal/gpn.git",
    "cyvcf2>=0.31.4",
    "openpyxl>=3.1.5",
    "alphagenome>=0.5.1",
    "polars-bio>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/songlab-cal/TraitGym"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/traitgym"]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.snakefmt]
include = '\.smk$|^Snakefile|\.py$'

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
]
